--- a/templates/movie/details.html.twig
+++ b/templates/movie/details.html.twig
@@ -12,7 +12,7 @@
         <li>Released at: {{ movie.releasedAt|date('Y M d') }}</li>
         <li>Country : {{ movie.country }}</li>
         <li>Rated : {{ movie.rated }}</li>
-        <li>Genres : {{ movie.genres|reduce((carry, genre) => carry == '' ? carry ~ genre.name : carry ~ ', ' ~ genre.name) }}</li>
+        <li>Genres : {{ movie.genres|map(genre => genre.name)|join(', ') }}</li>
         <li>Price : {{ movie.price }}</li>
         <li>IMDb Id : {{ movie.omdbId }}</li>
     </ul>
